--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.4",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
