--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
